# deteccion-caras-py

./: main.py  pyproject.toml
docs/: tutface.ipynb  tutface3.ipynb
src/bol/: blur.ipynb  caras_conocidas.csv  detec_tarea67.ipynb  deteccion.ipynb  detector_dlib.ipynb  faces_names.csv
