[project]
name = "detector-caras-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cv>=1.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pytest>=9.0.1",
    "tk>=0.1.0",
]
